# Multi-Agent

./: .env.example  .gitignore  PLAN_FINAL.md  PLAN_v0.2.md  README.md  docker-compose.yml  environment.yml  package-lock.json  package.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  db.py  main.py
apps/api/app/agents/: base.py  langchain_agents.py  registry.py  runtime_types.py
apps/api/app/api/: approval.py  clarification.py  routes.py  serializers.py
apps/api/app/models/: __init__.py  records.py  schemas.py
apps/api/app/providers/: __init__.py  chat.py  embedding.py
apps/api/app/services/: artifact_store.py  batch_scheduler.py  checkpoint_store.py  container.py  context_assembler.py  context_budgeter.py  context_document_service.py  event_bus.py  execution_runtime.py  memory_service.py  provider_registry.py  rag_service.py  requirement_intake.py  retry_recovery_manager.py  workflow_graph_builder.py  workspace_editing.py
apps/api/tests/: test_agent_format_normalization.py  test_approval_api.py  test_artifact_store.py  test_batch_scheduler.py  test_chat_provider.py  test_clarification_api.py  test_context_document_service.py  test_context_pipeline.py  test_embedding_provider.py  test_event_bus.py  test_execution_runtime_graph.py  test_quality_gate_visibility.py  test_quality_report_serialization.py  test_rag_service.py  test_retry_recovery_manager.py  test_run_events_api.py  test_runtime_types.py  test_workflow_graph_builder.py
apps/web/: README.md  package.json
tasks/1f0f1891-74ac-4701-a6ea-647243506f1a/: README.md
(+351 files in other folders)
